new probability org

--- a/book_rmd/_bookdown.yml
+++ b/book_rmd/_bookdown.yml
@@ -13,8 +13,9 @@ rmd_files: [
   "section_sampling.Rmd",
   "section_sampling_examples.Rmd",
   #######
-  "section_between_vs_within.Rmd", # not exactly sure where to put this
+  # "section_between_vs_within.Rmd"
   #######
+  "section_probability.Rmd",
   "section_basic_descriptive_stats.Rmd",
   "section_probability_and_random_variables.Rmd",
   "section_expected_value.Rmd",
